docs: link official baselines and Codex workflow